@@ -1,5 +1,16 @@
 2009-01-20  Stefan Kost  <ensonic@users.sf.net>
 
+	* TODO:
+	  More ideas.
+
+	* gtkdoc-fixxref.in:
+	  Really fix double extension of entities.
+
+	* style.css:
+	  Fix link color of xrefs symbols.
+
+2009-01-20  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-fixxref.in:
 	  Indent.
 
